{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 24,
  "lineage": "8676343b-9fcd-08aa-9ebc-6f97c407d6bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0c819a8f8ecea83",
            "arn": "arn:aws:ec2:eu-west-2:462622527060:elastic-ip/eipalloc-0e0c819a8f8ecea83",
            "association_id": "eipassoc-047618f89a3f2f54a",
            "domain": "vpc",
            "id": "eipalloc-0e0c819a8f8ecea83",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0d5c94aa6349f903a",
            "private_dns": "ip-10-0-1-48.eu-west-2.compute.internal",
            "private_ip": "10.0.1.48",
            "public_dns": "ec2-13-134-200-253.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.134.200.253",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "redis-nat-eip",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "tags_all": {
              "Name": "redis-nat-eip",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-028af9a1eb20046ca",
            "arn": "arn:aws:ec2:eu-west-2:462622527060:instance/i-09f86259dcd50e1ba",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f86259dcd50e1ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "redis-demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b3ffc1cbb1e1d5dd",
            "private_dns": "ip-10-0-1-130.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.130",
            "public_dns": "ec2-18-132-10-196.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.10.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a136036ccfb5a933",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d3980665b2ff5c3",
            "tags": {
              "Name": "bastion-host",
              "Owner": "abhinav",
              "Project": "redis-ha-demo",
              "Role": "bastion"
            },
            "tags_all": {
              "Name": "bastion-host",
              "Owner": "abhinav",
              "Project": "redis-ha-demo",
              "Role": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01ca4bf164bbf8045"
            ]
          },
          "dependencies": [
            "aws_key_pair.redis_key",
            "aws_security_group.bastion_sg",
            "aws_subnet.bastion",
            "aws_vpc.redis_vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.redis_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "redis_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-028af9a1eb20046ca",
            "arn": "arn:aws:ec2:eu-west-2:462622527060:instance/i-07d290bdc9c6265e6",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d290bdc9c6265e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "redis-demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03f42fe21d6827aef",
            "private_dns": "ip-10-0-2-168.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04e9db0c80bfb16e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09132311ac3961e12",
            "tags": {
              "Name": "master-redis",
              "Owner": "abhinav",
              "Project": "redis-ha-demo",
              "Role": "redis-master"
            },
            "tags_all": {
              "Name": "master-redis",
              "Owner": "abhinav",
              "Project": "redis-ha-demo",
              "Role": "redis-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098d5eb5a706fb5c0"
            ]
          },
          "dependencies": [
            "aws_key_pair.redis_key",
            "aws_security_group.bastion_sg",
            "aws_security_group.redis_sg",
            "aws_subnet.redis_master",
            "aws_vpc.redis_vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.redis_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "redis_replica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-028af9a1eb20046ca",
            "arn": "arn:aws:ec2:eu-west-2:462622527060:instance/i-0d8411c635c04ef99",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d8411c635c04ef99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "redis-demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01076a13763c0816c",
            "private_dns": "ip-10-0-3-33.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fcea42d25d917aac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-099c3be40c17ec9ba",
            "tags": {
              "Name": "replica-redis",
              "Owner": "abhinav",
              "Project": "redis-ha-demo",
              "Role": "redis-replica"
            },
            "tags_all": {
              "Name": "replica-redis",
              "Owner": "abhinav",
              "Project": "redis-ha-demo",
              "Role": "redis-replica"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098d5eb5a706fb5c0"
            ]
          },
          "dependencies": [
            "aws_key_pair.redis_key",
            "aws_security_group.bastion_sg",
            "aws_security_group.redis_sg",
            "aws_subnet.redis_replica",
            "aws_vpc.redis_vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.redis_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462622527060:internet-gateway/igw-074c83aae7a0e632f",
            "id": "igw-074c83aae7a0e632f",
            "owner_id": "462622527060",
            "tags": {
              "Name": "redis-igw",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "tags_all": {
              "Name": "redis-igw",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "vpc_id": "vpc-069f9002b7d23b5d8"
          },
          "dependencies": [
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0c819a8f8ecea83",
            "association_id": "eipassoc-047618f89a3f2f54a",
            "connectivity_type": "public",
            "id": "nat-07b7675b0fc23c88f",
            "network_interface_id": "eni-0d5c94aa6349f903a",
            "private_ip": "10.0.1.48",
            "public_ip": "13.134.200.253",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05d3980665b2ff5c3",
            "tags": {
              "Name": "redis-nat-gw",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "tags_all": {
              "Name": "redis-nat-gw",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.bastion",
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462622527060:route-table/rtb-00fad6dd77a83254d",
            "id": "rtb-00fad6dd77a83254d",
            "owner_id": "462622527060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07b7675b0fc23c88f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "redis-private-rt",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "tags_all": {
              "Name": "redis-private-rt",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-069f9002b7d23b5d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.bastion",
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462622527060:route-table/rtb-008c093b1b859c74a",
            "id": "rtb-008c093b1b859c74a",
            "owner_id": "462622527060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074c83aae7a0e632f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "redis-public-rt",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "tags_all": {
              "Name": "redis-public-rt",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-069f9002b7d23b5d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d050ebe1f0fd2928",
            "route_table_id": "rtb-00fad6dd77a83254d",
            "subnet_id": "subnet-09132311ac3961e12"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.bastion",
            "aws_subnet.redis_master",
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_replica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b6eaac97ef7d6c1",
            "route_table_id": "rtb-00fad6dd77a83254d",
            "subnet_id": "subnet-099c3be40c17ec9ba"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.bastion",
            "aws_subnet.redis_replica",
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fd9e36e0d315f33",
            "route_table_id": "rtb-008c093b1b859c74a",
            "subnet_id": "subnet-05d3980665b2ff5c3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.bastion",
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462622527060:security-group/sg-01ca4bf164bbf8045",
            "description": "Allow SSH from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ca4bf164bbf8045",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "462622527060",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "tags_all": {
              "Name": "bastion-sg",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-069f9002b7d23b5d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462622527060:security-group/sg-098d5eb5a706fb5c0",
            "description": "Redis SG for master and replica",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098d5eb5a706fb5c0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis traffic within SG",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01ca4bf164bbf8045"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "462622527060",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "tags_all": {
              "Name": "db-sg",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-069f9002b7d23b5d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462622527060:subnet/subnet-05d3980665b2ff5c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d3980665b2ff5c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "462622527060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bastion-subnet",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "tags_all": {
              "Name": "bastion-subnet",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "vpc_id": "vpc-069f9002b7d23b5d8"
          },
          "dependencies": [
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redis_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462622527060:subnet/subnet-09132311ac3961e12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09132311ac3961e12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "462622527060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-db-subnet-1",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "tags_all": {
              "Name": "private-db-subnet-1",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "vpc_id": "vpc-069f9002b7d23b5d8"
          },
          "dependencies": [
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redis_replica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462622527060:subnet/subnet-099c3be40c17ec9ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099c3be40c17ec9ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "462622527060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-db-subnet-2",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "tags_all": {
              "Name": "private-db-subnet-2",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "vpc_id": "vpc-069f9002b7d23b5d8"
          },
          "dependencies": [
            "aws_vpc.redis_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "redis_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:462622527060:vpc/vpc-069f9002b7d23b5d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c85b46b09844e60",
            "default_route_table_id": "rtb-0e23b9e0b5e3ab227",
            "default_security_group_id": "sg-00a803edc17a5b8d3",
            "dhcp_options_id": "dopt-067c6573c5dd4ac8e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069f9002b7d23b5d8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e23b9e0b5e3ab227",
            "owner_id": "462622527060",
            "tags": {
              "Name": "redis-vpc",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            },
            "tags_all": {
              "Name": "redis-vpc",
              "Owner": "abhinav",
              "Project": "redis-ha-demo"
            }
          }
        }
      ]
    }
  ]
}